# WebpageConsolidator

./: README.md  cli_selector.py  main.py  pyproject.toml  traceback_logger.py  web_fetcher.py
webpageconsolidator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
